# mpc_obscodes

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build_test.yml  build_test_publish.yml  compare_upstream.yml
mpc_obscodes/: __init__.py  compare.py  fetch.py
mpc_obscodes/tests/: test_compare.py  test_fetch.py  test_mpc_obscodes.py
